--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Nexather Group</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
-    body {
+    html, body {
+      height: 100%;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
       background-color: #0d1117;
       color: #c9d1d9;
+    }
+    body > nav {
+      flex-shrink: 0;
+    }
+    main {
+      flex: 1 0 auto;
+      padding: 2rem 1rem;
+      max-width: 960px;
+      margin: auto;
     }
     .navbar {
       background-color: #161b22;
@@ -19,15 +32,21 @@
     }
     .hero {
       padding: 80px 0;
+      text-align: center;
     }
     .hero h1 {
       font-size: 3rem;
       color: #58a6ff;
     }
     .footer {
+      flex-shrink: 0;
       background-color: #161b22;
       color: #8b949e;
       padding: 2rem 0;
+      text-align: center;
+    }
+    nav .nav-link:hover {
+      color: #58a6ff !important;
     }
   </style>
 </head>
@@ -40,22 +59,24 @@
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="services.html">Solutions</a></li>
-          <li class="nav-item"><a class="nav-link" href="internal.html" style="display: none;">Access</a></li>
+          <li class="nav-item"><a class="nav-link" href="internal.html" style="display:none;">Access</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <header class="hero text-center container">
-    <h1>Urban Stability Through Data</h1>
-    <p class="lead mt-3">Predictive infrastructure. Discreet integration. Targeted foresight.</p>
-  </header>
+  <main>
+    <header class="hero">
+      <h1>Urban Stability Through Data</h1>
+      <p class="lead mt-3">Predictive infrastructure. Discreet integration. Targeted foresight.</p>
+    </header>
 
-  <section class="container">
-    <div class="row">
+    <section class="row">
       <div class="col-md-6">
         <h2>Our Mission</h2>
-        <p>Nexather Group empowers Tier 1 urban authorities with silent integration of real-time behavioral analytics across metropolitan sectors. Our modular systems enable situational foresight, risk scoring, and infrastructural control at scale.</p>
+        <p>
+          Nexather Group empowers Tier 1 urban authorities with silent integration of real-time behavioral analytics across metropolitan sectors. Our modular systems enable situational foresight, risk scoring, and infrastructural control at scale.
+        </p>
       </div>
       <div class="col-md-6">
         <h2>Core Systems</h2>
@@ -66,10 +87,10 @@
           <li>Biometric Predictive Forecast Engine (BPFE)</li>
         </ul>
       </div>
-    </div>
-  </section>
+    </section>
+  </main>
 
-  <footer class="footer text-center mt-5">
+  <footer class="footer">
     <div class="container">
       <p>© 2045 Nexather Holdings. Operational Certificate #REDACTED. All Systems Monitored.</p>
     </div>
