--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,7 +13,6 @@
   <link rel="alternate icon" type="image/png" href="vulture_cyan.png" sizes="32x32" />
   <link rel="shortcut icon" href="vulture_cyan.ico" />
 
-  <!-- Styles -->
   <style>
     html, body {
       margin: 0; padding: 0; height: 100%;
@@ -87,5 +88,46 @@
       color: #bbb;
       user-select: text;
     }
+    footer {
+      flex-shrink: 0;
+      text-align: center;
+      padding: 1rem 0;
+      font-size: 0.75rem;
+      color: #444;
+      border-top: 1px solid #222;
+      user-select: none;
+    }
   </style>
 </head>
+<body>
+  <nav>
+    <div class="logo">.VLT</div>
+    <div>
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
+    </div>
+  </nav>
+
+  <main>
+    <h1>Advanced Communication Systems</h1>
+    <div>
+      <p>
+        In the shadows of the city, .VLT controls the unseen web of data streams.
+        Precision. Silence. Control.
+      </p>
+    </div>
+    <div>
+      <ul>
+        <li>Encrypted channels</li>
+        <li>Adaptive protocols</li>
+        <li>Untraceable exchanges</li>
+      </ul>
+    </div>
+  </main>
+
+  <footer>
+    &copy; 2025 .VLT Corporation. All rights reserved.
+  </footer>
+</body>
+</html>
