--- a/index.html
+++ b/index.html
@@ -110,18 +110,22 @@
   </nav>
 
   <main>
-    <h1>Advanced Communication Systems</h1>
+    <h1>V.U.L.T.U.R.E.</h1>
     <div>
       <p>
-        In the shadows of the city, .VLT controls the unseen web of data streams.
-        Precision. Silence. Control.
+        Variable Unified Logistics &amp; Tactical Underground Reconnaissance Enterprise.<br />
+        Specialists in covert data exfiltration, secure signal interception, and shadow network orchestration.<br />
+        Where precision meets discretion — facilitating communication beyond the reach of conventional systems.<br />
+        Embedded within the city’s veins, we operate unseen, unheard, and unstoppable.
       </p>
     </div>
     <div>
       <ul>
-        <li>Encrypted channels</li>
-        <li>Adaptive protocols</li>
-        <li>Untraceable exchanges</li>
+        <li>Encrypted signal pulse coordination</li>
+        <li>Adaptive flight pattern encoding</li>
+        <li>Untraceable network nodes</li>
+        <li>Autonomous relay systems</li>
+        <li>Real-time covert analytics</li>
       </ul>
     </div>
   </main>
