--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>.VLT — Advanced Communication Systems</title>
+  <title>.VLT — V.U.L.T.U.R.E.</title>
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&display=swap" rel="stylesheet" />
@@ -106,32 +106,46 @@
       border-top: 1px solid #222;
       user-select: none;
     }
-    /* Graph container */
-    .graph-container {
-      grid-column: 1 / -1;
+
+    /* Visual containers */
+    .visual-group {
+      display: flex;
+      flex-direction: column;
+      gap: 3rem;
+    }
+
+    .visual-box {
       background: #111;
       border: 1px solid #222;
-      padding: 1rem;
       border-radius: 4px;
+      padding: 1rem;
       user-select: none;
+      text-align: center;
     }
-    .graph-title {
+
+    .visual-title {
       color: #00ffff;
       font-weight: 700;
       font-size: 1.1rem;
-      margin-bottom: 0.75rem;
+      margin-bottom: 1rem;
       letter-spacing: 0.1em;
       text-transform: uppercase;
       user-select: text;
     }
-    /* Axis labels */
+
+    /* Chart styles */
+    svg {
+      width: 100%;
+      height: auto;
+      display: block;
+      margin: 0 auto;
+    }
     .axis-label {
       fill: #666;
       font-size: 0.75rem;
       font-family: 'IBM Plex Mono', monospace;
       user-select: none;
     }
-    /* Line style */
     .line-path {
       fill: none;
       stroke: #00ffff;
@@ -139,11 +153,39 @@
       stroke-linejoin: round;
       stroke-linecap: round;
     }
-    /* Points */
     .data-point {
       fill: #00ffff;
       stroke: #0a0a0a;
       stroke-width: 1;
+    }
+
+    /* Radial progress */
+    .radial-bg {
+      fill: none;
+      stroke: #222;
+      stroke-width: 10;
+    }
+    .radial-fg {
+      fill: none;
+      stroke: #00ffff;
+      stroke-width: 10;
+      stroke-linecap: round;
+      transition: stroke-dashoffset 0.7s ease;
+    }
+    .radial-text {
+      fill: #00ffff;
+      font-family: 'IBM Plex Mono', monospace;
+      font-weight: 700;
+      font-size: 1.5rem;
+      user-select: text;
+    }
+
+    /* Bar chart */
+    .bar {
+      fill: #00ffff;
+    }
+    .bar-bg {
+      fill: #222;
     }
   </style>
 </head>
@@ -161,26 +203,58 @@
 
   <main>
     <h1>V.U.L.T.U.R.E.</h1>
-    <div>
-      <p>
-        Variable Unified Logistics &amp; Tactical Underground Reconnaissance Enterprise.<br />
-        Specialists in covert data exfiltration, secure signal interception, and shadow network orchestration.<br />
-        Where precision meets discretion — facilitating communication beyond the reach of conventional systems.<br />
-        Embedded within the city’s veins, we operate unseen, unheard, and unstoppable.
-      </p>
-    </div>
-    <div>
-      <ul>
-        <li>Encrypted signal pulse coordination</li>
-        <li>Adaptive flight pattern encoding</li>
-        <li>Untraceable network nodes</li>
-        <li>Autonomous relay systems</li>
-        <li>Real-time covert analytics</li>
-      </ul>
+
+    <!-- Left column with visuals -->
+    <div class="visual-group">
+      <!-- Radial progress: Network Uptime -->
+      <section class="visual-box" aria-label="Network uptime">
+        <div class="visual-title">Network Uptime</div>
+        <svg viewBox="0 0 120 120" role="img" aria-labelledby="uptimeTitle uptimeDesc" width="100" height="100" >
+          <title id="uptimeTitle">Network Uptime</title>
+          <desc id="uptimeDesc">Circle showing 87 percent uptime</desc>
+          <circle class="radial-bg" cx="60" cy="60" r="50" />
+          <circle
+            class="radial-fg"
+            cx="60" cy="60" r="50"
+            stroke-dasharray="314"
+            stroke-dashoffset="40"
+            transform="rotate(-90 60 60)"
+          />
+          <text x="60" y="68" text-anchor="middle" class="radial-text">87%</text>
+        </svg>
+      </section>
+
+      <!-- Bar chart: Relay Node Activity -->
+      <section class="visual-box" aria-label="Relay node activity">
+        <div class="visual-title">Relay Node Activity</div>
+        <svg viewBox="0 0 200 120" role="img" aria-labelledby="relayTitle relayDesc" width="100%" height="100" >
+          <title id="relayTitle">Relay Node Activity</title>
+          <desc id="relayDesc">Bar chart showing activity levels of relay nodes</desc>
+
+          <!-- Background bars -->
+          <rect class="bar-bg" x="20" y="20" width="20" height="80" rx="3" ry="3" />
+          <rect class="bar-bg" x="60" y="20" width="20" height="80" rx="3" ry="3" />
+          <rect class="bar-bg" x="100" y="20" width="20" height="80" rx="3" ry="3" />
+          <rect class="bar-bg" x="140" y="20" width="20" height="80" rx="3" ry="3" />
+
+          <!-- Active bars -->
+          <rect class="bar" x="20" y="55" width="20" height="45" rx="3" ry="3" />
+          <rect class="bar" x="60" y="40" width="20" height="60" rx="3" ry="3" />
+          <rect class="bar" x="100" y="65" width="20" height="35" rx="3" ry="3" />
+          <rect class="bar" x="140" y="30" width="20" height="70" rx="3" ry="3" />
+
+          <!-- Labels -->
+          <text x="30" y="115" class="axis-label" text-anchor="middle">A</text>
+          <text x="70" y="115" class="axis-label" text-anchor="middle">B</text>
+          <text x="110" y="115" class="axis-label" text-anchor="middle">C</text>
+          <text x="150" y="115" class="axis-label" text-anchor="middle">D</text>
+        </svg>
+      </section>
     </div>
 
-    <section class="graph-container" aria-label="Signal Optimization Over Time">
-      <div class="graph-title">Signal Optimization Over Time</div>
+    <!-- Right column with line chart -->
+    <section class="visual-box" aria-label="Signal Optimization Over Time">
+      <div class="visual-title">Signal Optimization Over Time</div>
       <svg viewBox="0 0 400 150" role="img" aria-labelledby="title desc" width="100%" height="150" xmlns="http://www.w3.org/2000/svg" >
         <title id="title">Line chart showing signal optimization over time</title>
         <desc id="desc">The line steadily increases from left to right with minor fluctuations.</desc>
@@ -196,66 +270,35 @@
         <text x="180" y="145" class="axis-label" text-anchor="middle">T3</text>
         <text x="250" y="145" class="axis-label" text-anchor="middle">T4</text>
         <text x="320" y="145" class="axis-label" text-anchor="middle">T5</text>
-        <text x="380" y="145" class="axis-label" text-anchor="middle">T6</text>
 
         <!-- Y-axis labels -->
-        <text x="25" y="130" class="axis-label" text-anchor="end">0%</text>
-        <text x="25" y="100" class="axis-label" text-anchor="end">25%</text>
-        <text x="25" y="70" class="axis-label" text-anchor="end">50%</text>
-        <text x="25" y="40" class="axis-label" text-anchor="end">75%</text>
-        <text x="25" y="20" class="axis-label" text-anchor="end">100%</text>
+        <text x="25" y="130" class="axis-label" text-anchor="end">0</text>
+        <text x="25" y="100" class="axis-label" text-anchor="end">25</text>
+        <text x="25" y="70" class="axis-label" text-anchor="end">50</text>
+        <text x="25" y="40" class="axis-label" text-anchor="end">75</text>
+        <text x="25" y="20" class="axis-label" text-anchor="end">100</text>
 
-        <!-- Line Path -->
-        <path class="line-path" d="M40,120 L90,110 L140,85 L190,80 L240,50 L290,40 L340,30 L380,20" />
+        <!-- Line path -->
+        <path
+          class="line-path"
+          d="M40 120 L90 105 L140 90 L190 85 L240 65 L290 45 L340 35 L380 30"
+        />
 
-        <!-- Data Points -->
+        <!-- Points -->
         <circle class="data-point" cx="40" cy="120" r="4" />
-        <circle class="data-point" cx="90" cy="110" r="4" />
-        <circle class="data-point" cx="140" cy="85" r="4" />
-        <circle class="data-point" cx="190" cy="80" r="4" />
-        <circle class="data-point" cx="240" cy="50" r="4" />
-        <circle class="data-point" cx="290" cy="40" r="4" />
-        <circle class="data-point" cx="340" cy="30" r="4" />
-        <circle class="data-point" cx="380" cy="20" r="4" />
+        <circle class="data-point" cx="90" cy="105" r="4" />
+        <circle class="data-point" cx="140" cy="90" r="4" />
+        <circle class="data-point" cx="190" cy="85" r="4" />
+        <circle class="data-point" cx="240" cy="65" r="4" />
+        <circle class="data-point" cx="290" cy="45" r="4" />
+        <circle class="data-point" cx="340" cy="35" r="4" />
+        <circle class="data-point" cx="380" cy="30" r="4" />
       </svg>
     </section>
-
-    <h2>Mission</h2>
-    <div>
-      <p>
-        To deliver unbreakable communication frameworks for operatives operating in contested urban landscapes.<br />
-        Maintain absolute data integrity and deny adversaries any foothold within secured channels.<br />
-        Our reach is silent, but our presence is felt — safeguarding the unseen.
-      </p>
-    </div>
-    <div></div>
-
-    <h2>Technology</h2>
-    <div>
-      <p>
-        Leveraging bio-mimetic signal vectors and dynamic pulse modulation to evade detection.<br />
-        Proprietary encryption layers render intercepted data indecipherable.<br />
-        Our relay units operate autonomously, adjusting flight patterns to maintain optimal network integrity.<br />
-        Integration of AI-driven analytics enhances signal routing and threat assessment.
-      </p>
-    </div>
-    <div></div>
-
-    <h2>Security Protocols</h2>
-    <div>
-      <ul>
-        <li>Multi-layer authentication for all network nodes</li>
-        <li>Continuous encryption key rotation</li>
-        <li>Fail-safe data purge on compromise detection</li>
-        <li>Signal masking and noise insertion to disrupt interception</li>
-        <li>Compartmentalized access for internal operations</li>
-      </ul>
-    </div>
-    <div></div>
   </main>
 
   <footer>
-    &copy; 2025 .VLT Corporation. All rights reserved.
+    &copy; 2025 .VLT — All rights reserved
   </footer>
 </body>
 </html>
