--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       flex-direction: column;
       user-select: none;
       min-width: 320px;
+      overflow: hidden;
     }
     nav {
       background: #111;
@@ -38,6 +39,7 @@
       font-size: 0.875rem;
       color: #666;
       user-select: none;
+      flex-shrink: 0;
     }
     nav .logo {
       font-weight: 700;
@@ -55,42 +57,46 @@
       color: #00ffff;
     }
     main {
-      flex: 1 0 auto;
-      width: 100vw;
-      max-width: 1200px;
-      margin: 3rem auto;
-      padding: 0 2rem;
+      flex: 1 1 auto;
       display: grid;
       grid-template-columns: 1fr 1fr;
-      grid-gap: 3rem;
-      line-height: 1.5;
+      grid-template-rows: auto 1fr;
+      grid-gap: 2rem;
+      padding: 2rem 3rem;
+      height: calc(100vh - 60px); /* Subtract nav and footer heights */
+      overflow-y: auto;
     }
-    h1, h2 {
+    h1 {
+      grid-column: 1 / -1;
       font-weight: 700;
       color: #00ffff;
       text-transform: uppercase;
       letter-spacing: 0.15em;
-      margin: 0 0 1rem 0;
-      user-select: text;
-    }
-    h1 {
-      grid-column: 1 / -1;
       font-size: 2.5rem;
       border-bottom: 1px solid #222;
       padding-bottom: 0.5rem;
+      margin: 0 0 1rem 0;
+      user-select: text;
       animation: blink 2.5s infinite alternate;
+      align-self: center;
     }
     @keyframes blink {
       0% { opacity: 1; }
       50% { opacity: 0.5; }
       100% { opacity: 1; }
     }
+    section:first-of-type {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      max-width: 600px;
+      overflow-y: auto;
+    }
     p, ul {
-      margin: 0 0 1.5rem 0;
+      margin: 0 0 1rem 0;
       font-size: 0.95rem;
       color: #bbb;
       user-select: text;
-      max-width: 550px;
     }
     ul {
       list-style: none;
@@ -101,19 +107,11 @@
       color: #00ffff;
       margin-right: 0.6rem;
     }
-    footer {
-      flex-shrink: 0;
-      text-align: center;
-      padding: 1rem 0;
-      font-size: 0.75rem;
-      color: #444;
-      border-top: 1px solid #222;
-      user-select: none;
-    }
     .visual-group {
       display: flex;
-      flex-direction: column;
-      gap: 3rem;
+      gap: 1.5rem;
+      margin-top: 1rem;
+      flex-wrap: wrap;
     }
     .visual-box {
       background: #111;
@@ -121,13 +119,15 @@
       border-radius: 4px;
       padding: 1rem;
       user-select: none;
+      flex: 1 1 45%;
+      max-width: 280px;
       text-align: center;
     }
     .visual-title {
       color: #00ffff;
       font-weight: 700;
       font-size: 1.1rem;
-      margin-bottom: 1rem;
+      margin-bottom: 0.5rem;
       letter-spacing: 0.1em;
       text-transform: uppercase;
       user-select: text;
@@ -140,7 +140,7 @@
     }
     .axis-label {
       fill: #666;
-      font-size: 0.75rem;
+      font-size: 0.7rem;
       font-family: 'IBM Plex Mono', monospace;
       user-select: none;
     }
@@ -172,7 +172,7 @@
       fill: #00ffff;
       font-family: 'IBM Plex Mono', monospace;
       font-weight: 700;
-      font-size: 1.5rem;
+      font-size: 1.2rem;
       user-select: text;
     }
     .bar {
@@ -180,6 +180,20 @@
     }
     .bar-bg {
       fill: #222;
+    }
+    /* Right column graph container */
+    section:last-of-type {
+      overflow-y: auto;
+      max-height: 100%;
+    }
+    footer {
+      flex-shrink: 0;
+      text-align: center;
+      padding: 1rem 0;
+      font-size: 0.75rem;
+      color: #444;
+      border-top: 1px solid #222;
+      user-select: none;
     }
   </style>
 </head>
@@ -198,7 +212,6 @@
   <main>
     <h1>V.U.L.T.U.R.E.</h1>
 
-    <!-- Left column: Text + visuals -->
     <section>
       <p>
         V.U.L.T.U.R.E. delivers cutting-edge communication technology optimized for security, speed, and reliability. Our systems are engineered for covert operations and large-scale data networks.
@@ -237,68 +250,53 @@
             <!-- Background bars -->
             <rect class="bar-bg" x="20" y="20" width="20" height="80" rx="3" ry="3" />
             <rect class="bar-bg" x="60" y="20" width="20" height="80" rx="3" ry="3" />
-            <rect class="bar-bg" x="100" y="20" width="20" height="80" rx="3" ry="3" />
-            <rect class="bar-bg" x="140" y="20" width="20" height="80" rx="3" ry="3" />
+            <
 
-            <!-- Active bars -->
-            <rect class="bar" x="20" y="55" width="20" height="45" rx="3" ry="3" />
-            <rect class="bar" x="60" y="40" width="20" height="60" rx="3" ry="3" />
-            <rect class="bar" x="100" y="70" width="20" height="30" rx="3" ry="3" />
-            <rect class="bar" x="140" y="35" width="20" height="65" rx="3" ry="3" />
+ChatGPT said:
 
-            <!-- Labels -->
-            <text x="30" y="115" class="axis-label" text-anchor="middle">Node 1</text>
-            <text x="70" y="115" class="axis-label" text-anchor="middle">Node 2</text>
-            <text x="110" y="115" class="axis-label" text-anchor="middle">Node 3</text>
-            <text x="150" y="115" class="axis-label" text-anchor="middle">Node 4</text>
-          </svg>
-        </section>
-      </div>
-    </section>
+rect class="bar-bg" x="100" y="20" width="20" height="80" rx="3" ry="3" />
+<rect class="bar-bg" x="140" y="20" width="20" height="80" rx="3" ry="3" />
 
-    <!-- Right column: Graph -->
-    <section>
-      <svg viewBox="0 0 420 160" aria-label="Signal Optimization Over Time" role="img" style="width: 100%; height: auto;">
-        <!-- X-axis line -->
-        <line x1="30" y1="130" x2="400" y2="130" stroke="#666" stroke-width="1" />
-        <!-- Y-axis line -->
-        <line x1="30" y1="20" x2="30" y2="130" stroke="#666" stroke-width="1" />
+        <!-- Active bars -->
+        <rect class="bar" x="20" y="50" width="20" height="50" rx="3" ry="3" />
+        <rect class="bar" x="60" y="40" width="20" height="60" rx="3" ry="3" />
+        <rect class="bar" x="100" y="70" width="20" height="30" rx="3" ry="3" />
+        <rect class="bar" x="140" y="35" width="20" height="65" rx="3" ry="3" />
 
-        <!-- X-axis labels -->
-        <text x="40" y="145" class="axis-label" text-anchor="middle">T1</text>
-        <text x="90" y="145" class="axis-label" text-anchor="middle">T2</text>
-        <text x="140" y="145" class="axis-label" text-anchor="middle">T3</text>
-        <text x="190" y="145" class="axis-label" text-anchor="middle">T4</text>
-        <text x="240" y="145" class="axis-label" text-anchor="middle">T5</text>
-
-        <!-- Y-axis labels -->
-        <text x="25" y="130" class="axis-label" text-anchor="end">0</text>
-        <text x="25" y="100" class="axis-label" text-anchor="end">25</text>
-        <text x="25" y="70" class="axis-label" text-anchor="end">50</text>
-        <text x="25" y="40" class="axis-label" text-anchor="end">75</text>
-        <text x="25" y="20" class="axis-label" text-anchor="end">100</text>
-
-        <!-- Line path -->
-        <path
-          class="line-path"
-          d="M40 120 L90 105 L140 90 L190 85 L240 65 L290 45 L340 35 L380 30"
-        />
-
-        <!-- Points -->
-        <circle class="data-point" cx="40" cy="120" r="4" />
-        <circle class="data-point" cx="90" cy="105" r="4" />
-        <circle class="data-point" cx="140" cy="90" r="4" />
-        <circle class="data-point" cx="190" cy="85" r="4" />
-        <circle class="data-point" cx="240" cy="65" r="4" />
-        <circle class="data-point" cx="290" cy="45" r="4" />
-        <circle class="data-point" cx="340" cy="35" r="4" />
-        <circle class="data-point" cx="380" cy="30" r="4" />
+        <!-- Labels -->
+        <text x="30" y="115" class="axis-label" text-anchor="middle">Node 1</text>
+        <text x="70" y="115" class="axis-label" text-anchor="middle">Node 2</text>
+        <text x="110" y="115" class="axis-label" text-anchor="middle">Node 3</text>
+        <text x="150" y="115" class="axis-label" text-anchor="middle">Node 4</text>
       </svg>
     </section>
-  </main>
+  </div>
+</section>
 
-  <footer>
-    &copy; 2025 .VLT — All rights reserved
-  </footer>
-</body>
-</html>
+<section>
+  <svg viewBox="0 0 420 160" aria-label="Signal Optimization Over Time" role="img">
+    <line x1="30" y1="130" x2="400" y2="130" stroke="#666" stroke-width="1" />
+    <line x1="30" y1="20" x2="30" y2="130" stroke="#666" stroke-width="1" />
+    <text x="40" y="145" class="axis-label" text-anchor="middle">T1</text>
+    <text x="90" y="145" class="axis-label" text-anchor="middle">T2</text>
+    <text x="140" y="145" class="axis-label" text-anchor="middle">T3</text>
+    <text x="190" y="145" class="axis-label" text-anchor="middle">T4</text>
+    <text x="240" y="145" class="axis-label" text-anchor="middle">T5</text>
+    <text x="25" y="130" class="axis-label" text-anchor="end">0</text>
+    <text x="25" y="100" class="axis-label" text-anchor="end">25</text>
+    <text x="25" y="70" class="axis-label" text-anchor="end">50</text>
+    <text x="25" y="40" class="axis-label" text-anchor="end">75</text>
+    <text x="25" y="20" class="axis-label" text-anchor="end">100</text>
+    <path class="line-path" d="M40 120 L90 105 L140 90 L190 85 L240 65 L290 45 L340 35 L380 30" />
+    <circle class="data-point" cx="40" cy="120" r="4" />
+    <circle class="data-point" cx="90" cy="105" r="4" />
+    <circle class="data-point" cx="140" cy="90" r="4" />
+    <circle class="data-point" cx="190" cy="85" r="4" />
+    <circle class="data-point" cx="240" cy="65" r="4" />
+    <circle class="data-point" cx="290" cy="45" r="4" />
+    <circle class="data-point" cx="340" cy="35" r="4" />
+    <circle class="data-point" cx="380" cy="30" r="4" />
+  </svg>
+</section>
+
+</main> <footer> &copy; 2025 .VLT — All rights reserved </footer> </body> </html>
